trying to get the stupid stuff on the select recipe panel to come up correctly

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,12 @@
-/recipeManager
+/Thumbs.db
 /addIngredient.gif
 /addIngredientO.gif
 /addRecipe.gif
 /addRecipeO.gif
-/Thumbs.db
+/close.gif
+/closeO.gif
+/go.gif
+/goO.gif
+/newRecipe.gif
+/newRecipeO.gif
+/recipeManager
