fixed duplicate entries

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,21 @@
-/recipeManager
-/noImage.gif
-/home.gif
-/homeO.gif
-/nickRate.gif
-/nickRateO.gif
+/Thumbs.db
+/addIngredient.gif
+/addIngredientO.gif
+/addRecipe.gif
+/addRecipeO.gif
+/close.gif
+/closeO.gif
 /comment.gif
 /commentO.gif
 /delete.gif
 /deleteO.gif
+/go.gif
+/goO.gif
+/home.gif
+/homeO.gif
+/newRecipe.gif
+/newRecipeO.gif
+/nickRate.gif
+/nickRateO.gif
+/noImage.gif
+/recipeManager
